--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&family=Montserrat&display=swap" rel="stylesheet">
   <!--google fonts-->
   <link rel="stylesheet" href="style.css">
+  
   <title>Frontend Mentor | Product preview card component</title>
 
 </head>
@@ -50,8 +51,9 @@
     </article>
   </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by &nbsp;<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by &nbsp;<a href="https://github.com/ruzellll">ruzellll</a>.
   </div>
+  
 </body>
 </html>
